--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,10 @@
             <artifactId>modelmapper</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
         <!--        tests-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
